--- a/estilo/style.css
+++ b/estilo/style.css
@@ -40,7 +40,7 @@ a:hover{
     font-weight: normal;
     font-size: 3.5vw;
     font-family:'Sriracha', cursive;
-    font-style: oblique;
+    font-style: italic;
     line-height: 7vw;
 }
 
