--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,3 +1,5 @@
+@charset "utg8";
+
 *{
     margin: 0px;
     padding: 0px;
@@ -61,11 +63,6 @@ a:hover{
     color: white;
     padding: 0.5vw;
 }
-
-
-
-
-
 
 footer{
     background: black;
