--- a/estilo/style.css
+++ b/estilo/style.css
@@ -16,8 +16,9 @@ header{
 }
 header h1{
     font-weight: bolder;
-    font-family: 'Passion One', cursive;
+    font-family: 'Passion One', sans-serif;
     font-size: 8vw;
+    font-variant: small-caps;
 
 
 }
@@ -41,7 +42,7 @@ a:hover{
 .cordel p{
     font-weight: normal;
     font-size: 3.5vw;
-    font-family:'Sriracha', cursive;
+    font-family:'Sriracha', serif;
     font-style: italic;
     line-height: 7vw;
 }
